# QuerySense

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MYSQL_ROADMAP.md  README.md  RELEASE.md  SECURITY.md  STABILITY.md  docker-compose.yml  nested_loop_plan.json  pyproject.toml  ruff.toml  sample_plan.json  test_universal_ir.py
.github/actions/querysense/: action.yml
.github/workflows/: ci.yml  publish.yml  querysense-ci.yml  querysense-example.yml
docs/: comparison.md  reddit_referral.md
scripts/: benchmark_results.json  generate_real_explains.py  mysql_stress_test.py  stress_test.py
scripts/db/: mysql_init.sql  postgres_init.sql
src/querysense/: __init__.py  __main__.py  alerting.py  audit.py  baseline.py  compliance.py  config.py  engine.py  exceptions.py  migrations.py  plan_diff.py  policy.py  scorecard.py  upgrade.py  watch.py
src/querysense/analyzer/: __init__.py  analyzer.py  capabilities.py  causal.py  comparator.py  context.py  dag.py  engine_profile.py  errors.py  fingerprint.py  index_advisor.py  models.py  observability.py  path.py  registry.py  safety.py  sql_ast.py  sql_parser.py  suggestions.py
src/querysense/analyzer/rules/: __init__.py  bad_row_estimate.py  base.py  cardinality_drift.py  correlated_subquery.py  cte_materialization.py  excessive_seq_scans.py  foreign_key_index.py  generic_plan_hazard.py  index_only_heap_fetches.py  lossy_bitmap.py  missing_buffers.py  nested_loop_large_table.py  non_sargable_filter.py  parallel_query_not_used.py  partition_pruning.py  plan_shape_regression.py  planning_time_exceeded.py  seq_scan_large_table.py  spilling_to_disk.py  stale_statistics.py  table_bloat.py
src/querysense/analyzer/rules/fintech/: __init__.py  cost_attribution.py  latency_sla.py  transaction_safety.py
src/querysense/analyzers/: __init__.py  base.py
src/querysense/analyzers/mysql/: __init__.py  analyzer.py  parser.py  rules.py
src/querysense/causal/: __init__.py  engine.py  evidence.py  hypotheses.py
src/querysense/cli/: __init__.py  main.py
src/querysense/cli/commands/: __init__.py  analyze.py  baseline.py  ci.py  compliance.py  ir.py  policy.py  upgrade.py  watch.py
src/querysense/cloud/: __init__.py  __main__.py  app.py  auth.py  database.py  models.py  services.py  settings.py  tiers.py  usage.py
src/querysense/cloud/api/: __init__.py  analyze.py  deps.py  keys.py  plans.py  router.py  share.py
src/querysense/cloud/static/css/: custom.css
src/querysense/cloud/templates/: base.html  causal.html  compliance.html  index.html  login.html  pricing.html  register.html  regressions.html  upgrade.html  watch.html
src/querysense/cloud/templates/plans/: compare.html  detail.html  list.html  upload.html
src/querysense/cloud/templates/settings/: api_keys.html  billing.html
src/querysense/cloud/templates/share/: view.html
src/querysense/cloud/web/: __init__.py  routes.py
src/querysense/db/: __init__.py  probe.py
src/querysense/explainer/: __init__.py  claude.py  protocol.py
src/querysense/ir/: __init__.py  annotations.py  bridge.py  cost.py  node.py  operators.py  plan.py  properties.py  unified.py
src/querysense/ir/adapters/: __init__.py  base.py  mysql.py  oracle.py  postgres.py  postgresql.py  sqlserver.py
src/querysense/output/: __init__.py  pr_comment.py  renderers.py  schema.py
src/querysense/parser/: __init__.py  config.py  models.py  parser.py
src/querysense/temporal/: __init__.py  changepoint.py  drift.py  store.py
src/querysense/verification/: __init__.py  comparator.py  hypopg.py  whatif.py
tests/: __init__.py  test_backwards_compat.py  test_dag.py  test_fintech_rules.py  test_integration.py  test_ir.py  test_mysql_analyzer.py  test_new_rules.py  test_parser.py
tests/fixtures/: bad_estimate.json  index_scan_good.json  nested_loop_high_loops.json  sequential_scan_large_table.json  sort_without_index.json
tests/fixtures/mysql/: cli_test.json  explain_plans.json
