[project]
name = "querysense"
version = "0.5.2"
description = "PostgreSQL query performance analyzer. Detects slow queries, suggests indexes, works offline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joseph Ahn" }]
keywords = [
    "postgresql", "query-optimization", "database", "performance", 
    "explain", "explain-plan", "index", "index-recommendation",
    "sql", "static-analysis", "dba", "devops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.5.0,<3.0.0",
    "typer>=0.9.0,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "sqlparse>=0.5.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/JosephAhn23/Query-Sense"
Repository = "https://github.com/JosephAhn23/Query-Sense"
Documentation = "https://github.com/JosephAhn23/Query-Sense#readme"
Issues = "https://github.com/JosephAhn23/Query-Sense/issues"
Changelog = "https://github.com/JosephAhn23/Query-Sense/blob/main/CHANGELOG.md"
Security = "https://github.com/JosephAhn23/Query-Sense/blob/main/SECURITY.md"

[project.optional-dependencies]
ai = [
    "anthropic>=0.18.0,<1.0.0",
    "httpx>=0.26.0,<1.0.0",
]
# pglast provides the actual PostgreSQL parser via libpg_query
# Enables accurate SQL AST parsing for CTEs, window functions, complex JOINs
sql = [
    "pglast>=6.0,<7.0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.0,<1.0.0",
    "coverage>=7.4.0,<8.0.0",
    "pip-audit>=2.6.0,<3.0.0",
    "pglast>=6.0,<7.0",
    "import-linter>=2.0,<3.0",
]
db = [
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg[binary]>=3.1.0,<4.0.0",
]
cloud = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "bcrypt>=4.0.0",
    "jinja2>=3.1.0",
]
# For CI matrix testing against dependency boundaries
test-oldest = [
    "pydantic==2.5.0",
    "typer==0.9.0",
    "rich==13.7.0",
    "sqlparse==0.5.0",
]

[project.scripts]
querysense = "querysense.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/querysense"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/STABILITY.md",
    "/LICENSE",
]

# Include py.typed marker for PEP 561 compliance
[tool.hatch.build.targets.wheel.shared-data]
"src/querysense/py.typed" = "querysense/py.typed"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["querysense"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/querysense"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# =============================================================================
# Import Linter – enforce module boundaries after consolidation
# =============================================================================
# Run: python -m importlinter --config pyproject.toml
# These contracts prevent the codebase from drifting back into
# duplicated subsystems.  Each contract encodes one architectural rule.

[tool.importlinter]
root_packages = ["querysense"]

# ---- Contract 1: Dependency Rule (Clean Architecture) ----
# The core domain models must not depend on infrastructure (DB, CLI, Cloud).
[[tool.importlinter.contracts]]
name = "Models are independent of infrastructure"
type = "forbidden"
source_modules = [
    "querysense.analyzer.models",
    "querysense.analyzer.capabilities",
]
forbidden_modules = [
    "querysense.cli",
    "querysense.db",
    "querysense.cloud",
    "querysense.output",
]

# ---- Contract 2: Rules depend on base, not on analyzer orchestrator ----
# Individual rule modules must not import the Analyzer class directly.
# They receive data through the Rule protocol, not by pulling from the
# orchestrator.  This keeps rules testable in isolation.
[[tool.importlinter.contracts]]
name = "Rules do not import the Analyzer orchestrator"
type = "forbidden"
source_modules = [
    "querysense.analyzer.rules",
]
forbidden_modules = [
    "querysense.analyzer.analyzer",
]

# ---- Contract 3: CLI / Cloud are thin adapters ----
# Delivery mechanisms must not reach into rule internals.
# They should go through the public querysense API or AnalysisService.
# The analyzer __init__ imports rule modules for registration (side effect);
# that transitive path is explicitly allowed.
[[tool.importlinter.contracts]]
name = "CLI does not import rule internals"
type = "forbidden"
source_modules = [
    "querysense.cli",
]
forbidden_modules = [
    "querysense.analyzer.rules.bad_row_estimate",
    "querysense.analyzer.rules.seq_scan_large_table",
    "querysense.analyzer.rules.spilling_to_disk",
    "querysense.analyzer.rules.nested_loop_large_table",
]
ignore_imports = [
    "querysense.analyzer -> querysense.analyzer.rules.bad_row_estimate",
    "querysense.analyzer -> querysense.analyzer.rules.seq_scan_large_table",
    "querysense.analyzer -> querysense.analyzer.rules.spilling_to_disk",
    "querysense.analyzer -> querysense.analyzer.rules.nested_loop_large_table",
]

# ---- Contract 4: SQL parser port ----
# Only sql_ast.py (the port) may import from sql_parser.py (the adapter).
# All other modules should import SQL types from sql_ast.
# The sql_ast -> sql_parser edge is the intentional port-wraps-adapter
# import and is excluded from enforcement.
[[tool.importlinter.contracts]]
name = "SQL parser adapter is accessed only through the port"
type = "forbidden"
source_modules = [
    "querysense.analyzer.analyzer",
    "querysense.analyzer.context",
    "querysense.analyzer.rules",
]
forbidden_modules = [
    "querysense.analyzer.sql_parser",
]
ignore_type_checking_imports = true
ignore_imports = [
    "querysense.analyzer.sql_ast -> querysense.analyzer.sql_parser",
]

# ---- Contract 5: DAG is the single authority for rule ordering ----
# No module besides dag.py should implement topological sorting or
# cycle detection.  capabilities.py re-exports from dag for compat only.
[[tool.importlinter.contracts]]
name = "Layered architecture: analyzer layers"
type = "layers"
layers = [
    "querysense.cli",
    "querysense.engine",
    "querysense.analyzer.analyzer",
    "querysense.analyzer.dag",
    "querysense.analyzer.capabilities",
    "querysense.analyzer.models",
]

